# server/docs/swagger.json
@@ -19,18 +19,13 @@
                 "summary": "Create a new rental",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "trailerId",
-                        "name": "trailer_id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "userId",
-                        "name": "user_id",
-                        "in": "query",
-                        "required": true
+                        "description": "CreateRentalRequest",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CreateRentalRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -132,6 +127,17 @@
         }
     },
     "definitions": {
+        "handlers.CreateRentalRequest": {
+            "type": "object",
+            "properties": {
+                "trailer_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Address": {
             "type": "object",
             "properties": {
@@ -156,10 +162,12 @@
             "type": "object",
             "properties": {
                 "address": {
-                    "$ref": "#/definitions/models.Address"
-                },
-                "address_id": {
-                    "type": "integer"
+                    "description": "AddressID   int     `json:\"address_id\"`",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Address"
+                        }
+                    ]
                 },
                 "email": {
                     "type": "string"
@@ -179,10 +187,12 @@
             "type": "object",
             "properties": {
                 "address": {
-                    "$ref": "#/definitions/models.Address"
-                },
-                "address_id": {
-                    "type": "integer"
+                    "description": "AddressID int     `json:\"address_id\"`",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Address"
+                        }
+                    ]
                 },
                 "id": {
                     "type": "integer"
@@ -234,10 +244,12 @@
                     "type": "integer"
                 },
                 "location": {
-                    "$ref": "#/definitions/models.Location"
-                },
-                "location_id": {
-                    "type": "integer"
+                    "description": "LocationID         int      `json:\"location_id\"`",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Location"
+                        }
+                    ]
                 },
                 "number": {
                     "type": "string"
